--- a/Dockerfile_new
+++ b/Dockerfile_new
@@ -1,6 +1,6 @@
 FROM index.docker.io/guligo/jdk-maven-ant-tomcat:latest
 
-RUN rm -rf /tomcat/webapps/ROOT/*
+RUN rm -rf $CATALINA_HOME/webapps/ROOT/*
 
 RUN mkdir /root/mathbeta
 
@@ -8,8 +8,8 @@ COPY . /root/mathbeta
 
 RUN cd /root/mathbeta && ant -f build.xml
 
-RUN cp /root/mathbeta/WebRoot/* /tomcat/webapps/ROOT
+RUN cp /root/mathbeta/WebRoot/* $CATALINA_HOME/webapps/ROOT
 
-RUN touch /tomcat/logs/Catalina.log
+RUN touch $CATALINA_HOME/logs/Catalina.log
 
-ENTRYPOINT /tomcat/bin/startup.sh && tail -f /tomcat/logs/Catalina.log
+ENTRYPOINT $CATALINA_HOME/bin/startup.sh && tail -f $CATALINA_HOME/logs/Catalina.log
