--- a/Dockerfile_new
+++ b/Dockerfile_new
@@ -10,6 +10,8 @@ RUN cd /root/mathbeta && ant -f build.xml
 
 RUN cp -r /root/mathbeta/WebRoot/* $CATALINA_HOME/webapps/ROOT
 
+RUN rm -rf /root/mathbeta
+
 RUN touch $CATALINA_HOME/logs/Catalina.log
 
 ENTRYPOINT $CATALINA_HOME/bin/startup.sh && tail -f $CATALINA_HOME/logs/Catalina.log
