--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -11,6 +11,14 @@
 		<servlet-name>test</servlet-name>
 		<url-pattern>/test.do</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>user</servlet-name>
+		<servlet-class>com.mathbeta.servlet.DBServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>user</servlet-name>
+		<url-pattern>/user-list.do</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
