--- a/daocloud.yml
+++ b/daocloud.yml
@@ -9,7 +9,7 @@ install:
     - echo $MYENV
     - pwd
     - uname -a
-    - apt-get install curl libcurl3 libcurl3-dev php5-curl
+#    - apt-get install curl libcurl3 libcurl3-dev php5-curl
 #    - apt-get install -y git-core
 
 before_script:
