--- a/daocloud.yml
+++ b/daocloud.yml
@@ -23,5 +23,8 @@ script:
     - echo $MYENV
     - ps -ef|grep java
     - ls -l $CATALINA_HOME/webapps/ROOT/
-    - wget http://127.0.0.1:8080/test.do?a=mytest
-    - wget http://127.0.0.1:8080/userlist.do
+    - ping -c 127.0.0.1
+    - netstat -anp|grep java
+    - hostname
+    - wget http://`hostname`:8080/test.do?a=mytest
+    - wget http://`hostname`:8080/userlist.do
