--- a/daocloud.yml
+++ b/daocloud.yml
@@ -23,7 +23,7 @@ script:
     - echo $MYENV
     - ps -ef|grep java
     - ls -l $CATALINA_HOME/webapps/ROOT/
-    - ping -c 127.0.0.1
+    - ping -c 3 127.0.0.1
     - netstat -anp|grep java
     - hostname
     - wget http://`hostname`:8080/test.do?a=mytest
