--- a/wercker.yml
+++ b/wercker.yml
@@ -22,7 +22,7 @@ build:
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
     - script:
-        name: echo nodejs information
+        name: begin to build the code and test
         code: |
           uname -a
           rm -rf $CATALINA_HOME/webapps/ROOT/*
